# DropAndDrag

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE.md  README.md  build.bat  build.sh  build_linux.sh  install.sh
cmake/: FindSkia.cmake
docs/: architecture.md  database_schema.md
homebrew/Casks/: dropanddrag.rb
packaging/linux/: build_appimage.sh  control  dropanddrag.spec
packaging/macos/: Info.plist  create_dmg.sh
packaging/windows/: build.bat  installer.wxs
resources/icons/: icon.icns
scripts/: pgo.sh  release.sh
src/: main.cpp  version.hpp.in
src/app/: application.cpp  application.hpp
src/core/collections/: collection.cpp  collection.hpp  collection_json.hpp
src/core/database/: db.cpp  db.hpp  migrations.cpp  migrations.hpp
src/core/event_bus/: event_bus.cpp  event_bus.hpp
src/core/items/: iitem_store.hpp  item.hpp  item_json.hpp  item_store.cpp  item_store.hpp
src/core/mouse_shake/: mouse_shake_detector.cpp  mouse_shake_detector.hpp
src/core/search/: search_engine.cpp  search_engine.hpp
src/core/settings/: settings.cpp  settings.hpp
src/core/tags/: tag.cpp  tag.hpp  tag_json.hpp
src/core/threading/: thread_pool.cpp  thread_pool.hpp
src/platform/: native_app.hpp
src/platform/clipboard/: clipboard.hpp
src/platform/drag_drop/: drag_drop.cpp  drag_drop.hpp
src/platform/fs_monitor/: fs_monitor.hpp
src/platform/hotkeys/: hotkeys.cpp  hotkeys.hpp
src/platform/mouse_monitor/: mouse_monitor.hpp
src/platform/notifications/: notifications.hpp
src/platform/tray/: tray.cpp  tray.hpp
src/platform/window/: native_window.hpp  window_manager.cpp  window_manager.hpp
src/platform_impl/linux/: clipboard_linux.cpp  drag_drop_linux.cpp  file_monitor_linux.cpp  hotkeys_linux.cpp  mouse_monitor_linux.cpp  native_app_linux.cpp  notifications_linux.cpp  tray_linux.cpp  window_linux.cpp
src/platform_impl/macos/: clipboard_mac.mm  dd_renderable.h  drag_drop_mac.mm  file_monitor_mac.mm  hotkeys_mac.mm  mouse_monitor_mac.mm  native_app_mac.mm  notifications_mac.mm  tray_mac.mm  window_mac.mm
src/platform_impl/windows/: clipboard_win.cpp  drag_drop_win.cpp  file_monitor_win.cpp  hotkeys_win.cpp  mouse_monitor_win.cpp  notifications_win.cpp  tray_win.cpp  window_win.cpp
src/ui/: null_ui.cpp  renderer.hpp  renderer.mm  theme.hpp  theme.mm  ui_linux.cpp
src/ui/animations/: animation.cpp  animation.hpp
src/ui/components/: component.cpp  component.hpp
src/ui/context_menu/: context_menu.cpp  context_menu.hpp
src/ui/item_view/: item_view.cpp  item_view.hpp
src/ui/layout/: layout.cpp  layout.hpp
src/ui/renderer/: renderer.cpp  renderer.hpp  skia_context.cpp  skia_context.hpp  skia_context.mm
src/ui/search_bar/: search_bar.cpp  search_bar.hpp
src/ui/shelf/: shelf_view.cpp  shelf_view.hpp
src/ui/themes/: theme.cpp  theme.hpp
tests/: CMakeLists.txt  test_framework.hpp
tests/unit/: test_db.cpp  test_event_bus.cpp  test_item.cpp  test_search.cpp  test_thread_pool.cpp
